www/css/antarakata.css
body {
   background-color: black;
}

hr {
   background-color: #fff;
   color: white !important;
}

.navigasi a {
   text-decoration: none;
   color: #e17d07;
}

.link-active {
   color: white !important;
}

/* navigasi */
.navigasi {

   position: fixed;
   bottom: 0;
   margin-top: 30px;
   background-color: #252525;
}

.nav-btn {
   color: #e17d07;
}

/* index */
.indexposts {
   font-family: 'Montserrat', sans-serif;
}

.index-content {
   color: #1b1b1b !important;
   padding: 5px;
   margin: 2px 2px 2px 2px;
}

.index-content a {
   text-decoration: none;
   font-weight: bold;
   color: #e17d07;
}

.index-content p {
   color: white;
}

.post-title {
   color: white !important;
   font-family: 'Montserrat', sans-serif;
   font-weight: 600;
   text-transform: capitalize;
   text-align: left;
}

.post-summary {
   text-transform: none;
   font-family: 'Montserrat', sans-serif;
   color: white !important;
   font-weight: 300;
}

/* Kategori */
.tombol-kategori button {
   display: block;
   width: 100%;
}

/* Pencarian */
.text-empty-query h3 {
   font-family: 'Montserrat', sans-serif;
   font-size: 20px;
   font-weight: 600;
}

/* detail */
.detail-author {
   color: #e17d07;
   font-family: 'Montserrat', sans-serif;
   font-size: 12px;
   text-transform: capitalize;
}

.detail-artikel {
   text-align: justify;
   font-family: 'Montserrat', sans-serif;
   color: white;
   text-decoration: none;
   text-transform: none;
}

.card-komentar {
   text-transform: lowercase;
   font-family: 'Montserrat', sans-serif;
   margin-bottom: 20px;

}

